<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".InfoActivity">

    <ImageView
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_panel"
        android:layout_width="309dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="402dp"
        android:layout_height="5dp"
        android:layout_marginTop="96dp"
        android:background="@color/salat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="391dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/driver_info"
        android:layout_width="386dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number"
        android:layout_width="391dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="316dp"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/route_number"
        android:layout_width="386dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="372dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bus"
        android:layout_width="391dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="432dp"
        android:text="@string/bus"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_bus"
        android:layout_width="386dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="484dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_route"
        android:layout_width="386dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="260dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_bus"
        android:layout_width="391dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:layout_marginTop="540dp"
        android:text="@string/counte"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bus_count"
        android:layout_width="386dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="616dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/route"
        android:layout_width="391dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="208dp"
        android:text="@string/your_route"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go"
        android:layout_width="260dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="@color/salat"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginTop="688dp"
        android:layout_marginEnd="4dp"
        android:background="@color/black"
        android:contentDescription="@string/back"
        android:src="@drawable/back_driver2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>