<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DriveActivity">

    <ImageView
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/route_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_panel"
        android:layout_width="301dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/your_trip"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="402dp"
        android:layout_height="5dp"
        android:layout_marginTop="96dp"
        android:background="@color/salat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stop_view"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="476dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_stop"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="476dp"
        android:text="@string/stop"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/voshlo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="556dp"
        android:text="@string/kol_voshlo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kol_in"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:ems="10"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintStart_toEndOf="@+id/voshlo"
        app:layout_constraintTop_toBottomOf="@+id/your_stop" />

    <TextView
        android:id="@+id/vyshlo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="556dp"
        android:text="@string/kol_vyshlo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kol_out"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:background="@color/white"
        android:ems="10"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintStart_toEndOf="@+id/vyshlo"
        app:layout_constraintTop_toBottomOf="@+id/stop_view" />

    <ImageButton
        android:id="@+id/send_kol"
        android:layout_width="127dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="14dp"
        android:background="@color/black"
        android:src="@drawable/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_view" />

    <ListView
        android:id="@+id/stop_list"
        android:layout_width="360dp"
        android:layout_height="355dp"
        android:layout_marginTop="9dp"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:divider="@color/salat"
        android:dividerHeight="1dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/zan"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="628dp"
        android:text="@string/zanyato"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_zan"
        android:layout_width="56dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="628dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/svob"
        android:layout_width="136dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="628dp"
        android:text="@string/svobodno"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_svob"
        android:layout_width="56dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="628dp"
        android:background="@drawable/boarder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/end_trip"
        android:layout_width="270dp"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/salat"
        android:text="@string/end_trip"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:fontFamily="@font/myfont1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zan" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="69dp"
        android:layout_height="76dp"
        android:layout_marginTop="692dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:contentDescription="@string/back"
        android:src="@drawable/back_driver2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>